--- a/red_wizard_template.html
+++ b/red_wizard_template.html
@@ -26,7 +26,15 @@
     {% for wizard in wizards %}
     <div class="wizard">
         <p class="name">{{ wizard.name }}</p>
-        <p><strong>Medium Humanoid ({{ wizard.race.capitalize() }}), {{ wizard.alignment }}</strong></p>
+        <p>Medium Humanoid ({{ wizard.race }}), {{ wizard.alignment }}</p>
+        <p><span class="property">Armor Class:</span> {{ wizard.armor_class }}</p>
+        <p><span class="property">Hit Points:</span> {{ wizard.hit_points }} ({{ wizard.level }}d8 + {{ wizard.level * wizard.con_modifier }})</p>
+        <p><span class="property">Level:</span> {{ wizard.level }}</p>
+        <p><span class="property">Living Status:</span> {{ wizard.living_status }}</p>
+        {% if wizard.living_status == "living" %}
+        <p><span class="property">Age:</span> {{ wizard.age }}</p>
+        {% endif %}
+        <p><span class="property">School of Magic:</span> {{ wizard.school_of_magic }}</p>
         <p><span class="property">Ability Scores:</span></p>
         <ul>
             <li>STR: {{ wizard.ability_scores.STR }}</li>
@@ -36,12 +44,6 @@
             <li>WIS: {{ wizard.ability_scores.WIS }}</li>
             <li>CHA: {{ wizard.ability_scores.CHA }}</li>
         </ul>
-        <p><span class="property">Level:</span> {{ wizard.level }}</p>
-        <p><span class="property">Living Status:</span> {{ wizard.living_status }}</p>
-        {% if wizard.living_status == "living" %}
-        <p><span class="property">Age:</span> {{ wizard.age }}</p>
-        {% endif %}
-        <p><span class="property">School of Magic:</span> {{ wizard.school_of_magic }}</p>
     </div>
     {% endfor %}
 </body>
