--- a/red_wizard_template.html
+++ b/red_wizard_template.html
@@ -34,7 +34,7 @@
         <p><span class="property">Armor Class:</span> {{ wizard.armor_class }}</p>
         <p><span class="property">Hit Points:</span> {{ wizard.hit_points }} ({{ wizard.level }}d8 + {{ wizard.level * wizard.ability_modifiers.con_modifier }})</p>
         <p><span class="property">Speed:</span> 30 ft.</p>
-        <p><span class="property">Level:</span> {{ wizard.level }}</p>
+        
         <div class="red-line"></div>
         <p>
             <span class="property">STR</span> {{ wizard.ability_scores.STR }}({{ '+' if wizard.ability_modifiers.str_modifier > 0 }}{{ wizard.ability_modifiers.str_modifier }}) |
@@ -45,11 +45,15 @@
             <span class="property">CHA</span> {{ wizard.ability_scores.CHA }}({{ '+' if wizard.ability_modifiers.cha_modifier > 0 }}{{ wizard.ability_modifiers.cha_modifier }})
         </p>
 
+        <div class="red-line"></div>
+        <p><span class="property">Saving Throws:</span> INT +{{ wizard.saving_throws.INT }}, WIS +{{ wizard.saving_throws.WIS }}</p>
+
         <p><span class="property">Living Status:</span> {{ wizard.living_status }}</p>
         {% if wizard.living_status == "living" %}
         <p><span class="property">Age:</span> {{ wizard.age }}</p>
         {% endif %}
         <p><span class="property">School of Magic:</span> {{ wizard.school_of_magic }}</p>
+        <p><span class="property">Level:</span> {{ wizard.level }}</p>
         <p><span class="property">Ability Scores:</span></p>
         <ul>
             <li>STR: {{ wizard.ability_scores.STR }}</li>
