--- a/red_wizard_template.html
+++ b/red_wizard_template.html
@@ -47,22 +47,13 @@
 
         <div class="red-line"></div>
         <p><span class="property">Saving Throws:</span> INT +{{ wizard.saving_throws.INT }}, WIS +{{ wizard.saving_throws.WIS }}</p>
-
+        <p><span class="property">Skills:</span> Arcana +{{ wizard.skills.Arcana }}, Deception +{{ wizard.skills.Deception }}, Insight +{{ wizard.skills.Insight }}, Stealth +{{ wizard.skills.Stealth }}</p>
         <p><span class="property">Living Status:</span> {{ wizard.living_status }}</p>
         {% if wizard.living_status == "living" %}
         <p><span class="property">Age:</span> {{ wizard.age }}</p>
         {% endif %}
         <p><span class="property">School of Magic:</span> {{ wizard.school_of_magic }}</p>
         <p><span class="property">Level:</span> {{ wizard.level }}</p>
-        <p><span class="property">Ability Scores:</span></p>
-        <ul>
-            <li>STR: {{ wizard.ability_scores.STR }}</li>
-            <li>DEX: {{ wizard.ability_scores.DEX }}</li>
-            <li>CON: {{ wizard.ability_scores.CON }}</li>
-            <li>INT: {{ wizard.ability_scores.INT }}</li>
-            <li>WIS: {{ wizard.ability_scores.WIS }}</li>
-            <li>CHA: {{ wizard.ability_scores.CHA }}</li>
-        </ul>
     </div>
     {% endfor %}
 </body>
