Added Spell save DC calc

--- a/red_wizard_template.html
+++ b/red_wizard_template.html
@@ -56,7 +56,8 @@
         <h2>Actions</h2>
         <p><b>Multiattack.</b> Multiattack. The Red Wizard makes three Arcane Burst attacks.</p>
         <p><b>Arcane Burst.</b> Melee or Ranged Spell Attack: +6 to hit, reach 5 ft. or range 120 ft., one target. Hit: 19 (3d10 + 3) psychic damage.</p>
-        <p><b>Spellcasting.</b> The Red Wizard casts one of the following spells, using Intelligence as the spellcasting ability (spell save DC X):</p>
+        <p><b>Spellcasting.</b> The Red Wizard casts one of the following spells, using Intelligence as the spellcasting ability (spell save DC {{ wizard.spell_save_dc }}):</p>
+
         
         <div class="red-line"></div>
         <p>Debugging info</p>
