Added basic spell list for a necromancer

--- a/red_wizard_template.html
+++ b/red_wizard_template.html
@@ -57,7 +57,26 @@
         <p><b>Multiattack.</b> Multiattack. The Red Wizard makes three Arcane Burst attacks.</p>
         <p><b>Arcane Burst.</b> Melee or Ranged Spell Attack: +6 to hit, reach 5 ft. or range 120 ft., one target. Hit: 19 (3d10 + 3) psychic damage.</p>
         <p><b>Spellcasting.</b> The Red Wizard casts one of the following spells, using Intelligence as the spellcasting ability (spell save DC {{ wizard.spell_save_dc }}):</p>
+        <h3>At Will:</h3>
+        <p>
+        {{ wizard.spell_list.at_will | join(", ") }}
+        </p>
 
+        <h3>2/Day Each:</h3>
+        <p>
+        {{ wizard.spell_list['2_per_day'] | join(", ") }}
+        </p>
+
+        <h3>1/Day Each:</h3>
+        <p>
+        {{ wizard.spell_list['1_per_day'] | join(", ") }}
+        </p>
+<!-- ... Add more categories here in the same format ... -->
+
+<h3>1/Day:</h3>
+<p>
+  {{ wizard.spell_list['1/day'] | join(", ") }}
+</p>
         
         <div class="red-line"></div>
         <p>Debugging info</p>
